# rapid-arm-emu

./: Cargo.toml  README.md
code-generator/: Cargo.toml
code-generator/src/: expected-iform-p.dtd  instruction_parser.rs  interner.rs  main.rs
code-generator/src/instruction_parser/: isa.rs  operand.rs  system_register.rs  tar_ball.rs
emu-abi/: Cargo.toml
emu-abi/src/: abort.rs  array_helper.rs  as_ffi.rs  convert.rs  exec_state.rs  halt_reason.rs  internal_traits.rs  lib.rs  memory.rs  processor_state.rs
exec-ir/: Cargo.toml
exec-ir/src/: arena.rs  ffi_support.rs  halt_check_pass.rs  lib.rs  optimization_pass.rs  tests.rs
exec-ir/src/compiler/: cranelift_backend.rs  gcc_backend.rs  llvm_backend.rs  mod.rs  sync_cell.rs
exec-ir/tests/: basic.rs  block_params.rs  builder_validation.rs  control_flow.rs  flags.rs  halt_checks.rs  helper.rs  int_ops.rs  processor_state.rs  return_code.rs  vm_tests.rs
io-mmu/: Cargo.toml
io-mmu/src/: cpu_fabric.rs  fault.rs  icache.rs  lib.rs  lookup_cache.rs  memops.rs  page_table.rs
io-mmu/src/cpu_fabric/: exclusive_monitor.rs  mod.rs  object_manager.rs
io-mmu/src/memory_object/: impl.rs  mod.rs  objects.rs
io-mmu/tests/: io_mmu_tests.rs
jit-compiler-core/: Cargo.toml
jit-compiler-core/src/: arena.rs  chunk.rs  exec_context.rs  lib.rs
jit-compiler-core/src/compiler/: cranelift_backend.rs  gcc_backend.rs  llvm_backend.rs  mod.rs
jit-compiler-core/src/compiler/llvm_backend/: llvm_bindings.rs
jit-compiler-core/src/ir/: ffi_support.rs  halt_check_pass.rs  mod.rs  optimization_pass.rs
jit-compiler-core/tests/: basic.rs  block_params.rs  builder_validation.rs  control_flow.rs  flags.rs  halt_checks.rs  helper.rs  int_ops.rs  processor_state.rs  return_code.rs  vm_tests.rs
rapid-arm-emu/: Cargo.toml
rapid-arm-emu/src/: address_space.rs  array_helper.rs  cpu_fabric.rs  halt_reason.rs  ir.rs  lib.rs
rapid-arm-emu/src/a64/: mod.rs
rapid-arm-emu/src/armv9/: jit.rs  mod.rs
rapid-arm-emu/src/io_mmu/: mod.rs
rapid-arm-emu/src/ir/: arena.rs  ffi_support.rs  halt_check_pass.rs  mod.rs  tests.rs
rapid-arm-emu/src/ir/compiler/: cranelift_backend.rs  mod.rs  sync_cell.rs
rapid-arm-emu/src/mmu/: memops.rs  mod.rs
src/: a64.rs  exclusive_monitor.rs  halt_reason.rs  lib.rs  sync.rs
