[package]
name = "code-generator"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1


[dependencies]
tar = "0.4.45"
flate2 = "1.1.9"
eyre = "0.6.12"
tempfile = "3.27.0"
rayon = "1.12.0"
flume = { version = "0.12.0", features = ["select"] }
slab = "0.4.12"
roxmltree = "0.21.1"
itertools = "0.14.0"
string-interner = "0.20.0"
compact_str = "0.9.0"
parking_lot = "0.12.5"