[lints]
workspace = true

[package]
name = "exec-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rpds = { workspace = true }
io-mmu = { workspace = true }
emu-abi = { workspace = true }
arrayvec = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
pastey = { workspace = true }
stacker = "0.1.24"

[dependencies.gccjit]
version = "3.3.0"

[dependencies.inkwell]
version = "0.9.0"
features = ["llvm22-1-force-static"]

[dependencies.cranelift]
version = "0.132.0"
features = ["jit", "frontend", "native", "module"]

