[lints]
workspace = true

[package]
name = "exec-ir"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
stacker = "0.1.24"
rpds = { workspace = true }
io-mmu = { workspace = true }
emu-abi = { workspace = true }
arrayvec = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }


[dependencies.gccjit]
version = "3.3.0"

[dependencies.inkwell]
version = "0.9.0"
features = ["llvm22-1-force-static"]

[dependencies.cranelift]
version = "0.131.1"
features = ["jit", "frontend", "native", "module"]

