[lints]
workspace = true

[package]
name = "io-mmu"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
emu-abi = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }
thiserror = { workspace = true }
pastey = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
loom = "0.7.2"
