[lints]
workspace = true

[package]
name = "io-mmu"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
emu-abi = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }
thiserror = { workspace = true }
pastey = { workspace = true }
rpds = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
loom = "0.7.2"
