[lints]
workspace = true

[package]
name = "io-mmu"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
getrandom = "0.4.3"
once_cell = "1.21.4"
smallvec = { workspace = true }
emu-abi = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }
thiserror = { workspace = true }
pastey = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
loom = "0.7.2"
tempfile = "3.27.0"

