[lints]
workspace = true

[package]
name = "jit-compiler-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rpds = { workspace = true }
io-mmu = { workspace = true }
emu-abi = { workspace = true }
arrayvec = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
pastey = { workspace = true }
stacker = "0.1.24"

[dependencies.gccjit]
version = "3.3.0"

#[dependencies.llvm-sys-221]
#version = "221.0.0"
#package = "llvm-sys"
#features = ["force-static"]

[dependencies.cranelift]
version = "0.133.1"
features = ["jit", "frontend", "native", "module"]

