[lints]
workspace = true

[package]
# maybe armature later if I beat dynarmic
name = "rapid-arm-emu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
emu-abi = { workspace = true }
io-mmu = { workspace = true }
exec-ir = { workspace = true }
parking_lot = { workspace = true }
slab = "0.4.12"